# Laboratory2_work_2

./: CMakeLists.txt  README.md  ip_filter.cpp  main.cpp  test_ip_filter.cpp
.github/workflows/: release._2.yml  release.yml
